<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Control.GestioneConti.Activity.MovimentiActivity">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_aggiungi_movimento"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="LISTA MOVIMENTI"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:paddingVertical="10dp"
            android:background="@drawable/border_light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ENTRATE"
            android:layout_marginLeft="20dp"
            android:textColor="@color/green"
            android:textSize="20dp" />

        <ListView
            android:id="@+id/list_view_movimenti_entrate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_light" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="USCITE"
            android:layout_marginLeft="20dp"
            android:textColor="@color/red"
            android:textSize="20dp" />

        <ListView
            android:id="@+id/list_view_movimenti_uscite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/border_light" />

    </LinearLayout>

    <Button
        android:id="@+id/button_aggiungi_movimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/red_209"
        android:onClick="creaMovimentoGenerico"
        android:text="Aggiungi movimento"
        android:textColor="@color/white" />

</RelativeLayout>