<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingVertical="10dp"
    android:paddingHorizontal="5dp">

        <TextView
            android:id="@+id/tv_nome_conto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:textSize="24dp"
            android:text=""
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_saldo_conto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18dp"
            android:textAlignment="textEnd"
            android:text=""
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/image_view_cancella_conto"
            android:clickable="true"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_delete" />

</LinearLayout>