...
        android:id="@+id/layout_toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_crea_conto"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true">

        <LinearLayout
...
                    android:fontFamily="@font/duru_sans"
                    android:textSize="18dp"
                    android:visibility="visible"/>
            </LinearLayout>

            <ListView
                android:id="@+id/list_view_conti"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_light"
                android:visibility="invisible"
                android:layout_margin="20dp"/>
        </FrameLayout>
...
