...
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="Cancel"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_ok"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textSize="20dp"
...
